syntax = "proto2";

package editpoll;

option go_package = "./editpoll";

enum Field {
  UNDEFINED = 0;
  TITLE = 1;
  DESCRIPTION = 2;
  START_DATE = 3;
  FINISH_DATE = 4;
}

message EditPoll {
  required int32 poll_id = 1;
  optional bool create_poll = 2;
  optional Field field = 3;
  optional int32 referrer_my_polls_page = 4;
}